# mumoro

./: .gitignore  Builder.py  CMakeLists.txt  COPYING  README  build_graph.py  data_import.py  interface.i  makeswig  server.py  setup.py
algorithms/: CMakeLists.txt  interface.i  main.cpp
algorithms/DataStructures/: CMakeLists.txt  GraphFactory.cpp  GraphFactory.h  interface.i
algorithms/Interface/: CMakeLists.txt  ItinerariesRequests.cpp  ItinerariesRequests.h  Path.h  interface.i
algorithms/MultiObjectives/: CMakeLists.txt  Martins.h
algorithms/MultipleParticipants/: CMakeLists.txt  MPR_AspectConnectionRule.h  MPR_AspectCount.h  MPR_AspectPropagationRule.h  MPR_AspectTarget.h  MuparoTypedefs.h  PotentialMeetingPoints.cpp  PotentialMeetingPoints.h  interface.i  muparo.cpp  muparo.h  run_configurations.cpp  run_configurations.h
algorithms/RegLC/: AlgoTypedefs.h  AspectCount.h  AspectMaxCostPruning.h  AspectMinCost.h  AspectNoRun.h  AspectNodePruning.h  AspectStorePreds.h  AspectTarget.h  AspectTargetArea.h  AspectTargetAreaLandmark.h  AspectTargetAreaStop.h  AspectTargetLandmark.h  CMakeLists.txt  DRegLC.cpp  DRegLC.h  LabelSettingAlgo.cpp  LabelSettingAlgo.h  Landmark.cpp  Landmark.h  LandmarkSet.h  interface.i  reglc_dijkstra.cpp  reglc_dijkstra.h  reglc_graph.cpp  reglc_graph.h
algorithms/tests/: CMakeLists.txt  CsvWriter.h  ExpSharedPath.cpp  JsonWriter.h  SharedPath.conf  TestCarPooling.cpp  TestLandmarkArea.cpp  basic_test.conf  smaller_areas.conf  tests.cpp
algorithms/utils/: Area.cpp  Area.h  CMakeLists.txt  interface.i  node_filter_utils.cpp  node_filter_utils.h
lib/: bikestations.py  datastructures.py  elevation.py  gtfs_reader.py  kalkati_reader.py  layer.py  statsbikes.py
lib/core/: CMakeLists.txt  duration.cpp  graph_wrapper.cpp  graph_wrapper.h  main.cpp  mumoro.i  muparo.cpp  muparo.h  nodes_filter.cpp  nodes_filter.h  path_algo.cpp  path_algo.h  reglc_graph.cpp  reglc_graph.h  utils.cpp  utils.h
lib/core/debug/: cwd_debug.cc  cwd_debug.h  stack_trace.cpp
lib/core/test/: CMakeLists.txt  perf-conf-gen.py  perf-mp.conf  performance.cpp  reg_lc_test.cpp
scenarios/: import-tisseo.py  midi-pyrennees.py  sud-ouest.py  toulouse-centre-no-pt.py  toulouse-centre.py  toulouse-mixed.py
scenarios/toulouse/: conf.py
web/static/: design.css
web/static/scripts/: mumoro.js
web/templates/: index.html
